--- a/AIchatbot.html
+++ b/AIchatbot.html
@@ -2,29 +2,51 @@
 <html lang="en" class="dark">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>FixCity AI – Chatbot</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    /* Scrollbar for chatLog */
+    #chatLog::-webkit-scrollbar {
+      width: 6px;
+    }
+    #chatLog::-webkit-scrollbar-thumb {
+      background-color: rgba(100, 116, 139, 0.5);
+      border-radius: 3px;
+    }
+  </style>
 </head>
-<body class="bg-gradient-to-tr from-indigo-50 to-sky-100 dark:from-gray-900 dark:to-gray-800 text-gray-900 dark:text-white">
-  <header class="sticky top-0 z-50 bg-white/90 dark:bg-gray-900/90 shadow px-6 py-4 backdrop-blur flex justify-between items-center">
-    <h1 class="text-2xl font-bold text-indigo-600 dark:text-indigo-400">FixCity AI</h1>
-    <nav class="space-x-4">
-      <a href="index.html" class="hover:underline">Home</a>
-      <a href="features.html" class="hover:underline">Features</a>
-      <a href="dashboard.html" class="hover:underline">Dashboard</a>
-      <a href="submit.html" class="hover:underline">Submit</a>
-      <a href="community.html" class="hover:underline">Community</a>
-      <a href="signup.html" class="hover:underline">Sign UP</a>
+<body class="bg-gradient-to-tr from-indigo-50 to-sky-100 dark:from-gray-900 dark:to-gray-800 text-gray-900 dark:text-white transition-colors duration-500">
+
+  <header class="sticky top-0 z-50 bg-white/90 dark:bg-gray-900/90 shadow-md px-6 py-4 backdrop-blur flex justify-between items-center">
+    <h1 class="text-2xl font-extrabold text-indigo-600 dark:text-indigo-400 select-none">FixCity AI</h1>
+    <nav class="space-x-6 text-gray-700 dark:text-gray-300 font-medium">
+      <a href="index.html" class="hover:text-indigo-600 dark:hover:text-indigo-400 transition duration-200">Home</a>
+      <a href="features.html" class="hover:text-indigo-600 dark:hover:text-indigo-400 transition duration-200">Features</a>
+      <a href="dashboard.html" class="hover:text-indigo-600 dark:hover:text-indigo-400 transition duration-200">Dashboard</a>
+      <a href="submit.html" class="hover:text-indigo-600 dark:hover:text-indigo-400 transition duration-200">Submit</a>
+      <a href="community.html" class="hover:text-indigo-600 dark:hover:text-indigo-400 transition duration-200">Community</a>
+      <a href="signup.html" class="hover:text-indigo-600 dark:hover:text-indigo-400 transition duration-200 font-semibold border border-indigo-600 dark:border-indigo-400 rounded-md px-3 py-1">Sign Up</a>
     </nav>
   </header>
 
-  <main class="flex flex-col items-center justify-center min-h-screen py-16 px-4">
-    <div class="w-full max-w-md bg-white dark:bg-gray-900 rounded-xl shadow-lg p-6">
-      <h2 class="text-2xl font-bold mb-4 text-center text-indigo-600 dark:text-indigo-400">FixCity AI Assistant</h2>
-      <div id="chatLog" class="space-y-3 max-h-96 overflow-y-auto text-sm bg-gray-100 dark:bg-gray-800 p-3 rounded-md mb-4"></div>
-      <input type="text" id="chatInput" placeholder="Type your question..."
-        class="w-full px-4 py-2 border rounded-lg dark:bg-gray-700 dark:border-gray-600" />
+  <main class="flex flex-col items-center justify-center min-h-[80vh] py-16 px-4">
+    <div class="w-full max-w-md bg-white dark:bg-gray-900 rounded-xl shadow-xl p-6 flex flex-col">
+      <h2 class="text-3xl font-bold mb-6 text-center text-indigo-600 dark:text-indigo-400 select-none">FixCity AI Assistant</h2>
+
+      <div id="chatLog" 
+           class="space-y-4 max-h-96 overflow-y-auto text-sm bg-gray-100 dark:bg-gray-800 p-4 rounded-md scrollbar-thin scrollbar-thumb-indigo-400 scrollbar-track-gray-200 dark:scrollbar-track-gray-700">
+        <!-- Chat messages will appear here -->
+      </div>
+
+      <label for="chatInput" class="sr-only">Type your question</label>
+      <input 
+        type="text" 
+        id="chatInput" 
+        placeholder="Type your question and hit Enter..." 
+        autocomplete="off"
+        class="mt-4 w-full px-4 py-3 border border-gray-300 dark:border-gray-600 rounded-lg bg-white dark:bg-gray-700 text-gray-900 dark:text-gray-100 focus:outline-none focus:ring-2 focus:ring-indigo-500"
+      />
     </div>
   </main>
 
@@ -32,24 +54,33 @@
     const chatLog = document.getElementById('chatLog');
     const chatInput = document.getElementById('chatInput');
 
-    chatInput.addEventListener('keydown', e => {
-      if (e.key === 'Enter' && chatInput.value.trim()) {
-        const userMsg = chatInput.value;
-        const botResponse = getBotResponse(userMsg);
-        chatLog.innerHTML += `<div><strong>You:</strong> ${userMsg}</div>`;
-        chatLog.innerHTML += `<div><strong>Bot:</strong> ${botResponse}</div>`;
-        chatInput.value = '';
-        chatLog.scrollTop = chatLog.scrollHeight;
+    function addMessage(sender, message) {
+      const msgDiv = document.createElement('div');
+      msgDiv.classList.add('flex', sender === 'You' ? 'justify-end' : 'justify-start');
+
+      const bubble = document.createElement('div');
+      bubble.classList.add('max-w-[75%]', 'px-4', 'py-2', 'rounded-lg', 'whitespace-pre-wrap', 'break-words');
+
+      if(sender === 'You') {
+        bubble.classList.add('bg-indigo-600', 'text-white', 'rounded-br-none');
+      } else {
+        bubble.classList.add('bg-gray-300', 'dark:bg-gray-700', 'text-gray-900', 'dark:text-gray-100', 'rounded-bl-none');
       }
-    });
+
+      bubble.innerHTML = `<strong>${sender}:</strong> ${message}`;
+      msgDiv.appendChild(bubble);
+      chatLog.appendChild(msgDiv);
+      chatLog.scrollTop = chatLog.scrollHeight;
+    }
 
     function getBotResponse(input) {
       input = input.toLowerCase();
+
       if (input.includes("report")) return "You can report issues on the Submit page.";
       if (input.includes("status")) return "Check the Dashboard for live status updates.";
       if (input.includes("community")) return "Visit the Community page to engage with others.";
       if (input.includes("help")) return "I'm here to assist! Try asking about reporting, status, or community.";
-      if (input.includes("hi")) return "I'm here to assist! Try asking about reporting, status, or community.";
+      if (input.includes("hi") || input.includes("hello") || input.includes("hey")) return "Hello! How can I help you today?";
       if (input.includes("pothole")) return "To report a pothole, head to the Submit page and upload location details.";
       if (input.includes("street light")) return "You can report broken street lights via the Submit section.";
       if (input.includes("garbage")) return "Sanitation concerns? Use the Submit page to notify city services.";
@@ -63,10 +94,23 @@
       if (input.includes("login") || input.includes("sign in")) return "Click Login in the top right corner to sign in.";
       if (input.includes("suggestion") || input.includes("idea")) return "We’d love your ideas! Submit them on the Community page.";
 
- 
- 
- 
+      // Fallback for unrecognized inputs
+      return "Sorry, I didn't quite understand that. Could you please rephrase?";
     }
+
+    chatInput.addEventListener('keydown', e => {
+      if (e.key === 'Enter' && chatInput.value.trim()) {
+        const userMsg = chatInput.value.trim();
+        addMessage('You', userMsg);
+
+        const botResponse = getBotResponse(userMsg);
+        setTimeout(() => {
+          addMessage('Bot', botResponse);
+        }, 500); // simulate thinking delay
+
+        chatInput.value = '';
+      }
+    });
   </script>
 </body>
 </html>
